--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>Number Guessing Game</h3><br>
             <p id="outputText">You need to guess</p><br>
             <input id="userInput"><br><br>
-            <button id="btnSubmit" onclick="clickCounter()" type="button">Submit</button>
+            <button id="btnSubmit">Submit</button>
             <button id="btnPlayAgain">Play Again</button><br><br>
             <h1>Your previous Guesses</h1>
             <div id="list"></div>
