--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input id="userInput"><br><br>
             <button id="btnSubmit">Submit</button>
             <button id="btnPlayAgain">Play Again</button><br><br>
-            <h1>Your previous Guesses</h1>
+            <!-- <h1>Your previous Guesses</h1> -->
             <div id="list"></div>
         </div>
     </div>
